--- a/src/main/resources/templates/courses/course_information.html
+++ b/src/main/resources/templates/courses/course_information.html
@@ -53,6 +53,10 @@
                             <label for="student-id">Student ID</label>
                             <input type="text" class="form-control" id="student-id" name="studentId" required>
                         </div>
+                        <div class="form-group">
+                            <label for="student-grade">Student Grade</label>
+                            <input type="number" class="form-control" id="student-grade" name="studentGrade" step="0.01" min="0" max="10" required>
+                        </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                             <button type="submit" class="btn btn-primary">Add Student</button>
