--- a/src/main/resources/templates/courses/course_information.html
+++ b/src/main/resources/templates/courses/course_information.html
@@ -35,6 +35,11 @@
         <a th:href="@{/courses/delete/{id}(id=${course.id})}" class="btn btn-danger mb-4" onclick="return confirm('Are you sure you want to delete this course?')">Delete</a>
     </form>
 
+    <!-- Alert message -->
+    <div th:if="${message_course}" th:classappend="'alert alert-' + ${messageType_course}" role="alert">
+        <p th:text="${message_course}"></p>
+    </div>
+
     <h2>Student</h2>
     <!-- Add Student Modal -->
     <div class="modal fade" id="addStudentModal" tabindex="-1" role="dialog" aria-labelledby="addStudentModalLabel" aria-hidden="true">
